--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +20,9 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .menu ul,
@@ -26,6 +32,11 @@
 
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 50px;
+  grid-row: 2 / 4;
 }
 
 .sidebar .photo {
@@ -55,6 +66,9 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -83,9 +97,46 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+.photo, .side-content {
+  display: grid;
+  align-items: center;
+}
+
+.card {
+  height: 200px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+
+.menu, .nav {
+  align-self: center;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.card p {
+  padding: 5px;
 }
